@@ -1,3 +1,8 @@
+2008-10-15  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/intviewer/viewer-window.cc:
+	Internal viewer: view metatags with both t/T shortcuts
+
 2008-10-13  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/intviewer/viewer-window.cc:
